Fixes #188. Use getDeclaredConstructor instead direct call to newInstance. (#189)